--- a/ui.css
+++ b/ui.css
@@ -354,6 +354,10 @@ input[type=number]::-webkit-inner-spin-button {
 
 .button-linked {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1px;
+  width: 50%;
 
   text-align: center;
 }
